<resources>
    <string name="accessibility_service_description">Multi-action accessibility service to enable back action</string>
    <string name="accessibility_service_label">Multi-action Home Button</string>
    <string name="action_application">Selected application</string>
    <string name="action_back">Back</string>
    <string name="action_click">Action on click</string>
    <string name="action_double_click">Action on double click</string>
    <string name="action_google_assistant">Open Google Assistant</string>
    <string name="action_home">Home</string>
    <string name="action_lock_screen">Lock the screen</string>
    <string name="action_long_click">Action on long click</string>
    <string name="action_none">None</string>
    <string name="action_not_available_version_jb_mr1">Action not available for this version of Android. Minimum version : Jellybean 4.2</string>
    <string name="action_not_available_version_lollipop">Action not available for this version of Android. Minimum version : Lollipop 5.0</string>
    <string name="action_not_available_version_nougat">Action not available for this version of Android. Minimum version : Nougat 7.0</string>
    <string name="action_notif_down">Pull down notification</string>
    <string name="action_power_dialog">Power menu</string>
    <string name="action_quick_settings">Quick settings</string>
    <string name="action_recent_apps">Recent applications</string>
    <string name="action_screen_shot">Screenshot</string>
    <string name="action_settings">Device settings</string>
    <string name="action_split_screen">Split screen</string>
    <string name="action_task_manager_2x">Start multi task 2 times (open last app on some devices)</string>
    <string name="actions">Actions</string>
    <string name="actions_select">Select an action</string>
    <string name="admin_right_not_available">Can\'t open Administrator screen. Please open it manually from your device\'s settings or contact your manufacturer.</string>
    <string name="app_folder_loading">Loading for app list</string>
    <string name="app_name">Multi-action Home Button</string>
    <string name="appearance_left_margin">Left margin</string>
    <string name="appearance_left_margin_select">Set the button\'s left margin</string>
    <string name="appearance_right_margin">Right margin</string>
    <string name="appearance_right_margin_select">Set the button\'s right margin</string>
    <string name="behind_keyboard">Behind keyboard</string>
    <string name="behind_keyboard_explanation">Place the button behind the keyboard</string>
    <string name="billing_error">Error please try again…</string>
    <string name="billing_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAqny3QFyG242D9HPWnm9jnJujeunLiAMaHHmMdd24bAlnopjFwic9wGPa5ZwqcoTadB02oKjbgSMmrv8ArsLlI0VAPa4s+JPu7srHxxFIIc3kEgWmWOQdPVBQgkj2tQymIZch5BhsCSThvLz9EKn+oAlyVIUsKN0hdlZ1o9x6gL5sOKzpPYGxbTs23+0JjUpIXgyEPBa/4oVwm1Xrgi2UM3mcWQsynH34/kQp3YRVt4ohkXM8HGvdIX2sYBVPxvyPwNRgpF+rE/eGiwOp1YksT0Wfd7LrpsylncVKCFk8JAPeqKEBo3OMFhWVXS6Zvv59+boFoonE1DaEJj7l5/qFWwIDAQAB</string>
    <string name="billing_loading_error">Error when loading your purchases.</string>
    <string name="billing_retry">Retry</string>
    <string name="billing_success">Thank you for buying the pro version.\10\10The left and right buttons, the screenshot action, the lock screen action, the quick settings action and the power menu action are unlocked!</string>
    <string name="button_color">Background Button</string>
    <string name="button_invisible">Button invisible</string>
    <string name="button_off">Off</string>
    <string name="button_on">On</string>
    <string name="button_position_behind">Behind Keyboard</string>
    <string name="button_position_in_front_of">In front of Keyboard</string>
    <string name="button_position_on">On Keyboard</string>
    <string name="button_position_title">Button position with keyboard</string>
    <string name="buy_pro">Buy pro version</string>
    <string name="buy_pro_for">Buy pro version for :</string>
    <string name="ca_app_name">Contact</string>
    <string name="ca_contact">Contact</string>
    <string name="ca_open_faq">Open FAQ</string>
    <string name="ca_send">Send</string>
    <string name="ca_warning_1">Before sending me any email please be sure that your question or suggestion is not in the app\'s FAQ. If it has already been answered I won\'t respond to the email.</string>
    <string name="ca_warning_2">Please write your question or suggestion in English or French as I do not speak other languages. </string>
    <string name="ca_your_question">Your suggestion / question</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_app_button">Select App</string>
    <string name="choosed_app">Application :</string>
    <string name="default_dialog_title">Select a color</string>
    <string name="dismiss">Dismiss</string>
    <string name="drawer_item_donate">Support Development</string>
    <string name="drawer_item_faq">How to Use</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_share">Share with Friends</string>
    <string name="drawer_item_suggestions">Suggestions ?</string>
    <string name="drawer_rate">Rate App</string>
    <string name="drawer_version">Version %s</string>
    <string name="email_from_app">Multi-action Home Button [Suggestion] [version : %s]</string>
    <string name="email_from_app_me">sylvain.lagache.apps@gmail.com</string>
    <string name="enable_accessibility">Please enable accessibility for BACK</string>
    <string name="enable_accessibility_button">Enable accessibility</string>
    <string name="enable_accessibility_instructions">To activate these functions : \10- Back \10- Quick settings \10- Power menu \10- Recent apps on some devices \10- Pull notifications on some devices \10\10Multi-Action Home button needs accessibility rights. \10Ones granted go back to the app.</string>
    <string name="enable_accessibility_multitask">Please enable accessibility for MULTITASK</string>
    <string name="enable_accessibility_notification">Please enable accessibility for NOTIFICATIONS</string>
    <string name="enable_accessibility_power_dialog">Please enable accessibility for POWER MENU</string>
    <string name="enable_accessibility_quick_settings">Please enable accessibility for QUICK SETTINGS</string>
    <string name="enable_accessibility_warning">This app uses Accessibility services.\10\10Accessibility services are used to start several actions (start multi-task, pull down notification panel, pull down quick settings, open power menu, simulate back). These actions can help people that need to use their phone with only one hand to start actions that are not easy to do with only one hand (for example pull down notifications). Accessibility services are only used to these actions.</string>
    <string name="error_draw_permission">Error : Please enable Draw over other apps permission.</string>
    <string name="error_no_application_mail">Error : no Application found to send an email.</string>
    <string name="error_no_setting_draw_on_top">Error : no settings found to enable drawing on top.</string>
    <string name="faq_file_name">FAQ.html</string>
    <string name="follow_rotation">Follow rotation</string>
    <string name="google_assistant_not_found">Google Assistant not fount on your device.</string>
    <string name="home_button">Home Button</string>
    <string name="home_button_activated">Home Button is activated</string>
    <string name="home_center">Center</string>
    <string name="home_left">Left</string>
    <string name="home_right">Right</string>
    <string name="lock_screen_admin_button">Grant Admin rights</string>
    <string name="lock_screen_admin_description">Allow Multi-Action Home button to lock the device.</string>
    <string name="lock_screen_admin_instructions">To activate the lock screen function, X Home Bar needs admin rights. &lt;br/&gt;Ones granted go back to the app.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;This app uses the Device Administrator permission.&lt;/b&gt;&lt;br/&gt;&lt;br/&gt; The only administrator policy used is &lt;b&gt;\"force-lock\"&lt;/b&gt; and it is used to lock the device when the user has done the selected action.</string>
    <string name="lock_screen_admin_label">@string/app_name</string>
    <string name="look">Appearance</string>
    <string name="no_permission_dialog_message">This app needs permission to draw on top of other apps in order to display the home button persistently.</string>
    <string name="no_permission_dialog_message_toast">This app needs permission to draw on top of other apps. Please restart the app…</string>
    <string name="no_permission_dialog_title">Permission Request</string>
    <string name="notification">Notification</string>
    <string name="notification_action_deactivate">OFF</string>
    <string name="notification_action_deactivate_10sec">OFF 10 SEC</string>
    <string name="notification_enable">Show notification</string>
    <string name="notification_enable_subtitle">Can prevent the service from being killed by the system</string>
    <string name="notification_icon_visible">Notification icon invisible</string>
    <string name="ok">OK</string>
    <string name="open_play_store">Open Play Store</string>
    <string name="playstore_page">Your physical home button is dead or broken ? This app can help you. It\'s very simple: The app create a software button in the center bottom of you screen and add several actions to this button. Actions you can do with the button : _Home _Recent apps _Back _Settings _Pull down notification panel _Start a selected app _[Pro version] take a screenshot _[Pro version] lock the screen _[Pro version] display quick settings _[Pro version] start power menu Pro version The pro version gives you more actions as well as other buttons to place on the right and left bottom corners of your screen. /! If your device has a navigation bar (Home, Back and Recent apps buttons) on the screen, the button will be above the navigation bar! /! This app uses the Device Administrator permission. The only administrator policy used is \"force-lock\" and it is used to lock the device when the user has done the selected action. Permission : _Read Phone State =&gt; Needed (and only used) to load applications list because of some manufacturers limitations. _Write Internal Storage =&gt; Save screenshots in the device. This app uses Accessibility services.\10\10Accessibility services are used to start several actions (start multi-task, pull down notification panel, pull down quick settings, open power menu, simulate back). These actions can help people that need to use their phone with only one hand to start actions that are not easy to do with only one hand (for example pull down notifications). Accessibility services are only used to these actions. </string>
    <string name="please_wait">Please wait…</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="pro_already_unlocked">You already buy the pro version.\10\10The left and right buttons, the screenshot action and the lock screen action are unlocked</string>
    <string name="pro_version_content">The pro version unlocks : \10\10- Right button \10- Left button \10- Lock screen action \10- Quick settings action \10- Power menu action\10- Screenshot action (only for Android &gt; 5.0)</string>
    <string name="rate_dialog_cancel_button">Cancel</string>
    <string name="rate_dialog_message">How much did you like this app ?</string>
    <string name="rate_dialog_never_show_again">Never show this again</string>
    <string name="x_home_bar_description">This app add an iPhone X look alike home bar on your screen</string>
    <string name="x_home_bar_is_here">A new app is here!</string>
    <string name="x_home_bar_name">X Home Bar</string>
</resources>