<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/shadow_right"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:alpha="0.5"
        android:background="@drawable/shadow_right" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/shadow_right"
        android:background="@color/white"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- <FrameLayout
                 android:id="@+id/top_layout"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:background="@color/primary">

                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:alpha="0.15"
                     android:background="@drawable/ic_launcher_repeat" />

                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
                     android:src="@drawable/app_logo"
                     android:visibility="gone" />
             </FrameLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/settings_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/top_layout"
                    android:layout_marginTop="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/settings_textview"
                        style="@style/DrawerMainText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_item_settings" />

                    <com.joanzapata.iconify.widget.IconTextView
                        style="@style/DrawerIcon"
                        android:text="{mdi-settings}" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/suggestion_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/suggestion_textview"
                        style="@style/DrawerMainText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/drawer_item_suggestions" />

                    <ImageView
                        style="@style/DrawerIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_suggestions" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/faq_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/faq_textview"
                        style="@style/DrawerMainText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/drawer_item_faq" />

                    <ImageView
                        style="@style/DrawerIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_m_help" />
                </FrameLayout>


                <FrameLayout
                    android:id="@+id/rate_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/rate_textview"
                        style="@style/DrawerMainText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/drawer_rate" />

                    <ImageView
                        style="@style/DrawerIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_m_rate" />
                </FrameLayout>


                <FrameLayout
                    android:id="@+id/donate_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/share_layout"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/donate_textview"
                        style="@style/DrawerMainText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_item_donate" />

                    <com.joanzapata.iconify.widget.IconTextView
                        style="@style/DrawerIcon"
                        android:text="{mdi-heart}" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/share_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/share_textview"
                        style="@style/DrawerMainText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/drawer_item_share" />

                    <ImageView
                        style="@style/DrawerIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_m_share" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/privacy_policy_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/accent_dark"
                    android:textSize="13sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/version_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/drawer_version"
                    android:textColor="@color/grey_700"
                    android:textSize="13sp"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
